--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo" href="./index.html"
+          ><span class="logo-web">Web</span>Studio</a
+        >
+        <ul class="nav-link">
           <li>
-            <a href="#">Studio</a>
+            <a class="nav-link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a class="nav-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="#">Contacts</a>
+            <a class="nav-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
