--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
       <!-- Peculiarities -->
       <section class="section peculiarities">
-        <h2 class="peculiarities-title">Advantages</h2>
+        <h2 hidden class="peculiarities-title">Advantages</h2>
         <ul class="peculiarities-list">
           <li class="peculiarities-item">
             <h3 class="peculiarities-caption">Strategy</h3>
