--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <header class="header">
       <nav class="header-nav">
         <a class="logo" href="./index.html"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <ul class="header-list">
+          >Web<span class="logo-studio">Studio</span>
+        </a>
+        <ul class="list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
