--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <header class="header">
       <nav class="header-nav">
         <a class="logo" href="./index.html"
-          ><span class="logo-web">Web</span>Studio</a
+          >Web<span class="logo-studio">Studio</span></a
         >
         <ul class="header-list">
           <li class="header-item">
