--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <header class="header">
       <nav class="header-nav">
         <a class="logo" href="./index.html"
-          >Web<span class="logo-studio">Studio</span>
-        </a>
-        <ul class="list">
+          >Web<span class="logo-studio">Studio</span></a
+        >
+        <ul class="header-list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
