--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="page">
+  <body class="body">
     <!-- Header section -->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="./index.html"
+        <a class="logo link" href="./index.html"
           >Web<span class="logo-studio">Studio</span></a
         >
-        <ul class="header-list">
+        <ul class="header-list list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
