--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body">
+  <body class="page">
     <!-- Header section -->
     <header class="header">
       <nav class="header-nav">
