--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="address-item">
-          <li class="header-address-link">
-            <a class="address-link" href="mailto:info@devstudio.com"
+        <ul class="address-list list">
+          <li class="address-item">
+            <a class="address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-address-link">
-            <a class="address-link" href="tel:+110001111111"
+          <li class="address-item">
+            <a class="address-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
