--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <!-- Footer section -->
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
-        ><span class="logo-web">Web</span>Studio</a
+        >Web<span class="">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
