--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <!-- Header section -->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="./index.html"
+        <a class="logo link" href="./index.html"
           >Web<span class="logo-studio">Studio</span></a
         >
         <ul class="header-list">
@@ -177,7 +177,7 @@
     <!-- Footer section -->
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
-        ><span class="logo-web">Web</span>Studio</a
+        >Web<span class="">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
