--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- Peculiarities -->
       <section class="section peculiarities">
         <h2 hidden class="peculiarities-title">Advantages</h2>
-        <ul class="peculiarities-list">
+        <ul class="peculiarities-list list">
           <li class="peculiarities-item">
             <h3 class="peculiarities-caption">Strategy</h3>
             <p class="peculiarities-parph">
@@ -92,7 +92,7 @@
       <!-- Kind of activity -->
       <section class="section activity">
         <h2 class="activity-title">What are we doing</h2>
-        <ul class="activity-list">
+        <ul class="activity-list list">
           <li class="activity-item">
             <img
               class="activity-img"
