--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <!-- Team -->
       <section class="section team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="tean-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img
               class="team-img"
