--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="">Studio</span></a
+      <a class="footer-logo link" href="./index.html"
+        >Web<span class="footer-logo-studio">Studio</span></a
       >
-      <p class="footer-text">
+      <p class="footer-parph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
