--- a/portfolio.html
+++ b/portfolio.html
@@ -21,27 +21,27 @@
         <a class="logo link" href="./index.html"
           >Web<span class="logo-studio">Studio</span></a
         >
-        <ul class="header-list">
+        <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link" href="./index.html">Studio</a>
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="./portfolio.html">Portfolio</a>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="#">Contacts</a>
+            <a class="header-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="address-item">
-          <li class="header-address-link">
-            <a class="address-link" href="mailto:info@devstudio.com"
+        <ul class="address-list list">
+          <li class="address-item">
+            <a class="address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-address-link">
-            <a class="address-link" href="tel:+110001111111"
+          <li class="address-item">
+            <a class="address-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -51,9 +51,9 @@
     <main>
       <section class="portfolio section">
         <h1 class="portfolio-title" hidden>Portfolio</h1>
-        <ul class="portfolio-list">
+        <ul class="portfolio-list list">
           <li class="portfolio-item">
-            <button class="portfolio-btn-all" type="button">All</button>
+            <button class="portfolio-btn" type="button">All</button>
           </li>
           <li class="portfolio-item">
             <button class="portfolio-btn" type="button">Web Site</button>
@@ -68,9 +68,10 @@
             <button class="portfolio-btn" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="portfolio-projects-list">
+        <ul class="portfolio-projects-list list">
           <li class="portfolio-projects-item">
             <img
+              class="images list"
               src="./images/portfolio/img1.jpg"
               alt="Banking"
               width="360"
@@ -176,10 +177,10 @@
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="">Studio</span></a
+      <a class="footer-logo link" href="./index.html"
+        >Web<span class="footer-logo-studio">Studio</span></a
       >
-      <p class="footer-text">
+      <p class="footer-parph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
