--- a/portfolio.html
+++ b/portfolio.html
@@ -53,25 +53,25 @@
         <h1 class="portfolio-title" hidden>Portfolio</h1>
         <ul class="portfolio-list list">
           <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">All</button>
+            <button class="portfolio-btn link" type="button">All</button>
           </li>
           <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">Web Site</button>
+            <button class="portfolio-btn link" type="button">Web Site</button>
           </li>
           <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">App</button>
+            <button class="portfolio-btn link" type="button">App</button>
           </li>
           <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">Design</button>
+            <button class="portfolio-btn link" type="button">Design</button>
           </li>
           <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">Marketing</button>
+            <button class="portfolio-btn link" type="button">Marketing</button>
           </li>
         </ul>
         <ul class="portfolio-projects-list list">
           <li class="portfolio-projects-item">
             <img
-              class="images list"
+              class="images link"
               src="./images/portfolio/img1.jpg"
               alt="Banking"
               width="360"
