--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
           </li>
           <li class="portfolio-projects-item">
             <img
-              class="portfolio-projects-link"
+              class="portfolio-projects-link link"
               src="./images/portfolio/img2.jpg"
               alt="Payment"
               width="360"
@@ -95,7 +95,7 @@
           </li>
           <li class="portfolio-projects-item">
             <img
-              class="portfolio-projects-link"
+              class="portfolio-projects-link lonk"
               src="./images/portfolio/img3.jpg"
               alt="App"
               width="360"
@@ -106,7 +106,7 @@
           </li>
           <li class="portfolio-projects-item">
             <img
-              class="portfolio-projects-link"
+              class="portfolio-projects-link link"
               src="./images/portfolio/img4.jpg"
               alt="Service"
               width="360"
@@ -117,7 +117,7 @@
           </li>
           <li class="portfolio-projects-item">
             <img
-              class="portfolio-projects-link"
+              class="portfolio-projects-link link"
               src="./images/portfolio/img5.jpg"
               alt="Illustrations"
               width="360"
@@ -128,7 +128,7 @@
           </li>
           <li class="portfolio-projects-item">
             <img
-              class="portfolio-projects-link"
+              class="portfolio-projects-link link"
               src="./images/portfolio/img6.jpg"
               alt="Courses"
               width="360"
@@ -139,7 +139,7 @@
           </li>
           <li class="portfolio-projects-item">
             <img
-              class="portfolio-projects-link"
+              class="portfolio-projects-link link"
               src="./images/portfolio/img7.jpg"
               alt="Types of stories"
               width="360"
@@ -152,7 +152,7 @@
           </li>
           <li class="portfolio-projects-item">
             <img
-              class="portfolio-projects-link"
+              class="portfolio-projects-link link"
               src="./images/portfolio/img8.jpg"
               alt="Girl with food"
               width="360"
@@ -163,7 +163,7 @@
           </li>
           <li class="portfolio-projects-item">
             <img
-              class="portfolio-projects-link"
+              class="portfolio-projects-link link"
               src="./images/portfolio/img9.jpg"
               alt="A cup of coffee"
               width="360"
