--- a/portfolio.html
+++ b/portfolio.html
@@ -68,109 +68,105 @@
             <button class="portfolio-btn link" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="portfolio-projects-list list">
+        <ul class="projects-list list">
           <li class="portfolio-projects-item">
             <img
-              class="images link"
+              class="projects-link link"
               src="./images/portfolio/img1.jpg"
               alt="Banking"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-projects-caption">
-              Banking App Interface Concept
-            </h2>
-            <p class="portfolio-projects-parph">App</p>
+            <h2 class="projects-caption">Banking App Interface Concept</h2>
+            <p class="projects-parph">App</p>
           </li>
-          <li class="portfolio-projects-item">
+          <li class="projects-item">
             <img
-              class="portfolio-projects-link link"
+              class="projects-link link"
               src="./images/portfolio/img2.jpg"
               alt="Payment"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-projects-caption">Cashless Payment</h2>
-            <p class="portfolio-projects-parph">Marketing</p>
+            <h2 class="projects-caption">Cashless Payment</h2>
+            <p class="projects-parph">Marketing</p>
           </li>
-          <li class="portfolio-projects-item">
+          <li class="projects-item">
             <img
-              class="portfolio-projects-link lonk"
+              class="projects-link lonk"
               src="./images/portfolio/img3.jpg"
               alt="App"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-projects-caption">Meditation App</h2>
-            <p class="portfolio-projects-parph">App</p>
+            <h2 class="projects-caption">Meditation App</h2>
+            <p class="projects-parph">App</p>
           </li>
-          <li class="portfolio-projects-item">
+          <li class="projects-item">
             <img
-              class="portfolio-projects-link link"
+              class="projects-link link"
               src="./images/portfolio/img4.jpg"
               alt="Service"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-projects-caption">Taxi Service</h2>
-            <p class="portfolio-projects-parph">Marketing</p>
+            <h2 class="projects-caption">Taxi Service</h2>
+            <p class="projects-parph">Marketing</p>
           </li>
-          <li class="portfolio-projects-item">
+          <li class="projects-item">
             <img
-              class="portfolio-projects-link link"
+              class="projects-link link"
               src="./images/portfolio/img5.jpg"
               alt="Illustrations"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-projects-caption">Screen Illustrations</h2>
-            <p class="portfolio-projects-parph">Design</p>
+            <h2 class="projects-caption">Screen Illustrations</h2>
+            <p class="projects-parph">Design</p>
           </li>
-          <li class="portfolio-projects-item">
+          <li class="projects-item">
             <img
-              class="portfolio-projects-link link"
+              class="projects-link link"
               src="./images/portfolio/img6.jpg"
               alt="Courses"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-projects-caption">Online Courses</h2>
-            <p class="portfolio-projects-parph">Marketing</p>
+            <h2 class="projects-caption">Online Courses</h2>
+            <p class="projects-parph">Marketing</p>
           </li>
-          <li class="portfolio-projects-item">
+          <li class="projects-item">
             <img
-              class="portfolio-projects-link link"
+              class="projects-link link"
               src="./images/portfolio/img7.jpg"
               alt="Types of stories"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-projects-caption">
-              Instagram Stories Concept
-            </h2>
-            <p class="portfolio-projects-parph">Design</p>
+            <h2 class="projects-caption">Instagram Stories Concept</h2>
+            <p class="projects-parph">Design</p>
           </li>
-          <li class="portfolio-projects-item">
+          <li class="projects-item">
             <img
-              class="portfolio-projects-link link"
+              class="projects-link link"
               src="./images/portfolio/img8.jpg"
               alt="Girl with food"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-projects-caption">Organic Food</h2>
-            <p class="portfolio-projects-parph">Web Site</p>
+            <h2 class="projects-caption">Organic Food</h2>
+            <p class="projects-parph">Web Site</p>
           </li>
-          <li class="portfolio-projects-item">
+          <li class="projects-item">
             <img
-              class="portfolio-projects-link link"
+              class="projects-link link"
               src="./images/portfolio/img9.jpg"
               alt="A cup of coffee"
               width="360"
               height="300"
             />
-            <h2 class="portfolio-projects-caption">Fresh Coffee</h2>
-            <p class="portfolio-projects-parph">Web Site</p>
+            <h2 class="projects-caption">Fresh Coffee</h2>
+            <p class="projects-parph">Web Site</p>
           </li>
         </ul>
       </section>
