--- a/portfolio.html
+++ b/portfolio.html
@@ -69,9 +69,9 @@
           </li>
         </ul>
         <ul class="projects-list list">
-          <li class="portfolio-projects-item">
+          <li class="projects-item link">
             <img
-              class="projects-link link"
+              class="projects-link"
               src="./images/portfolio/img1.jpg"
               alt="Banking"
               width="360"
@@ -80,9 +80,9 @@
             <h2 class="projects-caption">Banking App Interface Concept</h2>
             <p class="projects-parph">App</p>
           </li>
-          <li class="projects-item">
+          <li class="projects-item link">
             <img
-              class="projects-link link"
+              class="projects-link"
               src="./images/portfolio/img2.jpg"
               alt="Payment"
               width="360"
@@ -91,9 +91,9 @@
             <h2 class="projects-caption">Cashless Payment</h2>
             <p class="projects-parph">Marketing</p>
           </li>
-          <li class="projects-item">
+          <li class="projects-item link">
             <img
-              class="projects-link lonk"
+              class="projects-link"
               src="./images/portfolio/img3.jpg"
               alt="App"
               width="360"
@@ -102,9 +102,9 @@
             <h2 class="projects-caption">Meditation App</h2>
             <p class="projects-parph">App</p>
           </li>
-          <li class="projects-item">
+          <li class="projects-item link">
             <img
-              class="projects-link link"
+              class="projects-link"
               src="./images/portfolio/img4.jpg"
               alt="Service"
               width="360"
@@ -113,9 +113,9 @@
             <h2 class="projects-caption">Taxi Service</h2>
             <p class="projects-parph">Marketing</p>
           </li>
-          <li class="projects-item">
+          <li class="projects-item link">
             <img
-              class="projects-link link"
+              class="projects-link"
               src="./images/portfolio/img5.jpg"
               alt="Illustrations"
               width="360"
@@ -124,9 +124,9 @@
             <h2 class="projects-caption">Screen Illustrations</h2>
             <p class="projects-parph">Design</p>
           </li>
-          <li class="projects-item">
+          <li class="projects-item link">
             <img
-              class="projects-link link"
+              class="projects-link"
               src="./images/portfolio/img6.jpg"
               alt="Courses"
               width="360"
@@ -135,9 +135,9 @@
             <h2 class="projects-caption">Online Courses</h2>
             <p class="projects-parph">Marketing</p>
           </li>
-          <li class="projects-item">
+          <li class="projects-item link">
             <img
-              class="projects-link link"
+              class="projects-link"
               src="./images/portfolio/img7.jpg"
               alt="Types of stories"
               width="360"
@@ -146,9 +146,9 @@
             <h2 class="projects-caption">Instagram Stories Concept</h2>
             <p class="projects-parph">Design</p>
           </li>
-          <li class="projects-item">
+          <li class="projects-item link">
             <img
-              class="projects-link link"
+              class="projects-link"
               src="./images/portfolio/img8.jpg"
               alt="Girl with food"
               width="360"
@@ -157,9 +157,9 @@
             <h2 class="projects-caption">Organic Food</h2>
             <p class="projects-parph">Web Site</p>
           </li>
-          <li class="projects-item">
+          <li class="projects-item link">
             <img
-              class="projects-link link"
+              class="projects-link"
               src="./images/portfolio/img9.jpg"
               alt="A cup of coffee"
               width="360"
