--- a/portfolio.html
+++ b/portfolio.html
@@ -69,104 +69,122 @@
           </li>
         </ul>
         <ul class="projects-list list">
-          <li class="projects-item link">
-            <img
-              class="projects-link"
-              src="./images/portfolio/img1.jpg"
-              alt="Banking"
-              width="360"
-              height="300"
-            />
-            <h2 class="projects-caption">Banking App Interface Concept</h2>
-            <p class="projects-parph">App</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/img1.jpg"
+                alt="Banking"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-caption">Banking App Interface Concept</h2>
+              <p class="projects-parph">App</p>
+            </a>
           </li>
-          <li class="projects-item link">
-            <img
-              class="projects-link"
-              src="./images/portfolio/img2.jpg"
-              alt="Payment"
-              width="360"
-              height="300"
-            />
-            <h2 class="projects-caption">Cashless Payment</h2>
-            <p class="projects-parph">Marketing</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/img2.jpg"
+                alt="Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-caption">Cashless Payment</h2>
+              <p class="projects-parph">Marketing</p>
+            </a>
           </li>
-          <li class="projects-item link">
-            <img
-              class="projects-link"
-              src="./images/portfolio/img3.jpg"
-              alt="App"
-              width="360"
-              height="300"
-            />
-            <h2 class="projects-caption">Meditation App</h2>
-            <p class="projects-parph">App</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/img3.jpg"
+                alt="App"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-caption">Meditation App</h2>
+              <p class="projects-parph">App</p>
+            </a>
           </li>
-          <li class="projects-item link">
-            <img
-              class="projects-link"
-              src="./images/portfolio/img4.jpg"
-              alt="Service"
-              width="360"
-              height="300"
-            />
-            <h2 class="projects-caption">Taxi Service</h2>
-            <p class="projects-parph">Marketing</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/img4.jpg"
+                alt="Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-caption">Taxi Service</h2>
+              <p class="projects-parph">Marketing</p>
+            </a>
           </li>
-          <li class="projects-item link">
-            <img
-              class="projects-link"
-              src="./images/portfolio/img5.jpg"
-              alt="Illustrations"
-              width="360"
-              height="300"
-            />
-            <h2 class="projects-caption">Screen Illustrations</h2>
-            <p class="projects-parph">Design</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/img5.jpg"
+                alt="Illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-caption">Screen Illustrations</h2>
+              <p class="projects-parph">Design</p>
+            </a>
           </li>
-          <li class="projects-item link">
-            <img
-              class="projects-link"
-              src="./images/portfolio/img6.jpg"
-              alt="Courses"
-              width="360"
-              height="300"
-            />
-            <h2 class="projects-caption">Online Courses</h2>
-            <p class="projects-parph">Marketing</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/img6.jpg"
+                alt="Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-caption">Online Courses</h2>
+              <p class="projects-parph">Marketing</p>
+            </a>
           </li>
-          <li class="projects-item link">
-            <img
-              class="projects-link"
-              src="./images/portfolio/img7.jpg"
-              alt="Types of stories"
-              width="360"
-              height="300"
-            />
-            <h2 class="projects-caption">Instagram Stories Concept</h2>
-            <p class="projects-parph">Design</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/img7.jpg"
+                alt="Types of stories"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-caption">Instagram Stories Concept</h2>
+              <p class="projects-parph">Design</p>
+            </a>
           </li>
-          <li class="projects-item link">
-            <img
-              class="projects-link"
-              src="./images/portfolio/img8.jpg"
-              alt="Girl with food"
-              width="360"
-              height="300"
-            />
-            <h2 class="projects-caption">Organic Food</h2>
-            <p class="projects-parph">Web Site</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/img8.jpg"
+                alt="Girl with food"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-caption">Organic Food</h2>
+              <p class="projects-parph">Web Site</p>
+            </a>
           </li>
-          <li class="projects-item link">
-            <img
-              class="projects-link"
-              src="./images/portfolio/img9.jpg"
-              alt="A cup of coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="projects-caption">Fresh Coffee</h2>
-            <p class="projects-parph">Web Site</p>
+          <li class="projects-item">
+            <a class="projects-link link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/img9.jpg"
+                alt="A cup of coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-caption">Fresh Coffee</h2>
+              <p class="projects-parph">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
