--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
@@ -196,7 +200,7 @@
       >
       <p class="footer-parph">
         Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        marketing & growth solutions. 123
       </p>
     </footer>
   </body>
