--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@
       >
       <p class="footer-parph">
         Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions. 123
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
